# fern-forecasting

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/commands/: add-module.md  fix-lint.md  test-coverage.md
.claude/rules/: dependencies.md  project-structure.md  python-style.md
.cursor/rules/: project.mdc  tests.mdc
.devcontainer/: devcontainer.json  post-create.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: auto-assign.yml  ci.yml  python-ci.yml
app/: Home.py
app/pages/: 1_Demand_Outlook.py  2_Order_Sheet.py  3_How_We_Did.py  4_Customer_Sentiment_Analysis.py  4_Customer_Voice.py
archive/: fern_main_analysis.ipynb
data/processed/: calendar_clean.parquet  inventory_clean.parquet  orders_clean.parquet  reviews_clean.parquet  reviews_scored.parquet  weekly_panel.parquet
data/raw/: fern_calendar.csv  fern_inventory.csv  fern_orders.csv  fern_reviews.csv
models/: README.md  demand_forecasting.ipynb  fern_main_analysis.ipynb  fern_models_analysis.ipynb
src/fern_forecasting/: __init__.py  dashboard.py  features.py  models.py  preprocessing.py
src/notebooks/: 01_eda.ipynb  02_sentiment_analysis.ipynb  03_value_argument.ipynb
src/scripts/: baseline_forecast.py  build_panel.py  clean_raw.py  score_reviews.py  tune_and_plot.py
